syntax = "proto3";
package rpc;
option go_package = ".;rpc";

message NodeInfo{
    string NodeId = 1;
    string ListenAddr  = 2;
    uint32 MaxRpcParamLen = 3;
    bool Private = 4;
	bool Retire = 5;
    repeated string PublicServiceList = 6;
}

//Client->Master
message RegServiceDiscoverReq{
    NodeInfo nodeInfo = 1;
}

//Master->Client
message SubscribeDiscoverNotify{
    string MasterNodeId = 1;
    bool IsFull = 2;
    string DelNodeId    = 3;
    repeated NodeInfo nodeInfo = 4;
}


//Client->Master
message NodeRetireReq{
    NodeInfo nodeInfo = 1;
}

//Master->Client
message Empty{
}

//Client->Master
message Ping{
    string NodeId = 1;
}

//Master->Client
message Pong{
    bool ok = 1;
}

message UnRegServiceDiscoverReq{
    string NodeId = 1;
}
