syntax = "proto3";
package rpc;
option go_package = ".;rpc";

message PBRpcRequestData{
  uint64 Seq            = 1;
  uint32 RpcMethodId    = 2;
  string ServiceMethod  = 3;
  bool   NoReply        = 4;
  bytes  InParam        = 5;
}

message PBRpcResponseData{
  uint64 Seq = 1;
  string Error = 2;
  bytes Reply = 3;
}
